--- a/sass/components/_services-section.scss
+++ b/sass/components/_services-section.scss
@@ -1,4 +1,11 @@
 /* Услуги компании */
+
+.services-section {
+  @include centered(none, inherit, inherit);
+  @media screen and (min-width: 1200px) {
+    @include centered(block, inherit, inherit);
+  }
+}
 .services-list {
   @include centered(flex, space-between, center);
 }
