--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -1,6 +1,6 @@
 .social-list {
   @include centered(flex, center, center);
-  margin-bottom: 30px;
+  // margin-bottom: 30px;
 
   &--margin {
     margin-top: 20px;
