--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -24,8 +24,16 @@ ul {
 }
 
 .section {
-  padding: 94px 0;
+  padding: 15px 0;
+  @media screen and (min-width: 768px) {
+    @include centered(flex, center, inherit);
+    padding: 15px 0;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0;
+  }
 }
+
 .section-title {
   color: $section-title-color;
   text-align: center;
@@ -42,12 +50,14 @@ ul {
   color: $section-title-color;
 }
 
-.section,
-.header,
-.footer {
-  @include centered(flex, center, inherit);
-}
 .container {
-  width: 1200px;
+  width: 480px;
   padding: 0 15px;
+  margin: auto;
+  @media screen and (min-width: 768px) {
+    width: 738px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
