--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,10 +1,13 @@
 /* Футер */
 .footer {
+  @include centered(flex, center, inherit);
   background-color: $footer-bgc;
   padding: 60px 0;
 }
 .footer > .container {
-  @include centered(flex, space-between, inherit);
+  @media screen and (min-width: 768px) {
+    @include centered(flex, space-between, inherit);
+  }
 }
 
 .footer-address {
