--- a/sass/components/_hero-section.scss
+++ b/sass/components/_hero-section.scss
@@ -1,6 +1,9 @@
 /* Герой */
 .section-hero {
-  padding: 200px 0;
+  padding: 118px 0;
+  @media screen and (min-width: 1200px) {
+    padding: 200px 0;
+  }
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
@@ -11,7 +14,13 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 1600px;
+  max-width: 480px;
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1600px;
+  }
   margin-right: auto;
   margin-left: auto;
 }
@@ -21,8 +30,12 @@
 .section-hero__title {
   color: $white-color;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.61;
+  @media screen and (min-width: 1200px) {
+    font-size: 44px;
+    line-height: 1.36;
+  }
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
