--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -7,6 +7,9 @@
   top: 0;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 750ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .is-hidden {
   visibility: hidden;
@@ -14,13 +17,17 @@
   opacity: 0;
 }
 .modal {
-  width: 528px;
+  width: 450px;
   background-color: #ffffff;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   padding: 40px;
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    .modal-form__checkbox-label {
+      font-size: 14px;
+      line-height: 1.71;
+    }
+  }
+  position: relative;
 }
 .modal__title {
   font-size: 20px;
@@ -42,7 +49,7 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   cursor: pointer;
   transition: outline-color var(--transition-function);
-  font-size: 12px;
+  font-size: 14px;
   line-height: 1.17;
 
   &:focus {
@@ -72,9 +79,9 @@
 
 .modal-form__checkbox-label {
   @include centered(flex, inherit, center);
-  font-size: 14px;
-  line-height: 1.71;
-  margin: 10px 0 30px 14px;
+  font-size: 12px;
+  line-height: 1.17;
+  margin: 10px 0 14px;
 }
 .modal-form__checkbox {
   -webkit-appearance: none;
@@ -84,11 +91,11 @@
   cursor: pointer;
 }
 .modal-form__checkbox-icon {
-  width: 16px;
+  width: 15px;
   height: 15px;
   border: 2px solid $section-title-color;
   border-radius: 2px;
-  margin-right: 7px;
+  margin-right: 5px;
   transition: border-color var(--transition-function),
     background-color var(--transition-function),
     background-image var(--transition-function);
