--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -4,11 +4,17 @@
 }
 
 .team-list {
-  @include centered(flex, inherit, inherit);
+  @media screen and(min-width:768px) {
+    @include centered(flex, inherit, inherit);
+  }
 }
 
 .team-list__item {
-  margin-left: 30px;
+  @media screen and (min-width: 768px) {
+    margin-left: 30px;
+  }
+  padding-bottom: 24px;
+  margin-bottom: 30px;
   font-size: 16px;
   line-height: 1.17;
   text-align: center;
