--- a/sass/components/_portfolio-projects.scss
+++ b/sass/components/_portfolio-projects.scss
@@ -1,12 +1,23 @@
 .projects-list {
-  @include centered(flex, center, inherit);
-  flex-wrap: wrap;
+  @media screen and(min-width:768px) {
+    @include centered(flex, center, inherit);
+    flex-wrap: wrap;
+  }
+
   margin-top: -30px;
   margin-left: -30px;
 }
 .projects-list__item {
-  flex-basis: calc(100% / 3 - 30px);
-  margin-left: 30px;
+  margin: auto;
+  flex-basis: calc(100% - 30px);
+
+  @media screen and(min-width:768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+  @media screen and(min-width:1200px) {
+    flex-basis: calc(100% / 3 - 30px);
+  }
   margin-top: 30px;
   transition: box-shadow var(--transition-function);
 }
