--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,52 +1,170 @@
 /* Хедер */
 
-.navigation-container {
-  @include centered(flex, space-between, center);
+.header {
+  border-bottom: 1px solid #ececec;
+  @include centered(flex, center, inherit);
+  position: relative;
 }
 
-.contacts-list,
-.navigation-list {
+.header > .container {
+  @include centered(flex, space-between, center);
+  padding: 16px 0;
+  @media screen and (min-width: 768px) {
+    padding: 19px 0;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 24px 0;
+  }
+}
+.tablet-desktop-menu {
   @include centered(none, inherit, inherit);
   @media screen and (min-width: 768px) {
     @include centered(flex, space-between, center);
   }
 }
-
-.header {
-  border-bottom: 1px solid #ececec;
-  @include centered(flex, center, inherit);
+.tablet-desktop-menu {
+  @media screen and (max-width: 768px) {
+    @include centered(none, inherit, inherit);
+  }
 }
-.header > .container {
+.menu-toggle {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+// .menu-button .icon-cross {
+//   display: none;
+// }
+// .menu-button.is-open .icon-cross {
+//   display: block;
+// }
+// .menu-button.is-open .icon-menu {
+//   display: none;
+// }
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+  &:hover,
+  &:focus {
+    fill: $accent-color;
+  }
+  @media (min-width: 768px) {
+    display: none;
+  }
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 0 40px;
+  background-color: $white-color;
+  z-index: 999;
+
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: $white-color;
+}
+
+.mobile-menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.navigation-container {
   @include centered(flex, space-between, center);
-  margin: 24px 0;
 }
-
 .navigation-list {
-  margin-left: 93px;
+  @media screen and (max-width: 768px) {
+    margin: 48px auto 302px 0;
+  }
+  @media screen and(min-width:768px) {
+    @include centered(flex, space-between, center);
+    margin-left: 88px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+  }
 }
 
 .navigation-list__item {
-  @include centered(flex, inherit, center);
-  margin-left: 50px;
-  position: relative;
+  @media screen and (max-width: 768px) {
+    margin-bottom: 32px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  @media screen and(min-width:768px) {
+    @include centered(flex, inherit, center);
+    margin-left: 50px;
+    position: relative;
+  }
 
   &:first-child {
     margin-left: 0;
   }
 }
-
+.contacts-list {
+  @include centered(block, inherit, inherit);
+  @media screen and(max-width:768px) {
+    margin-bottom: 64px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1200px) {
+    margin-left: 84px;
+  }
+  @media screen and (min-width: 1200px) {
+    @include centered(flex, space-between, center);
+    margin-left: 280px;
+  }
+}
 .contacts-list__item {
-  @include centered(flex, inherit, center);
-  margin-left: 50px;
-
+  // @include centered(flex, inherit, center);
+  @media screen and (min-width: 1200px) {
+    margin-left: 50px;
+    &:first-child {
+      margin-left: 0;
+    }
+  }
   &:first-child {
-    margin-left: 0;
+    @media screen and (max-width: 768px) {
+      margin-bottom: 32px;
+    }
+    @media screen and (min-width: 768px) and (max-width: 1200px) {
+      margin-bottom: 10px;
+    }
   }
 }
 
 .header__link {
   font-weight: 500;
-
+  // &:visited {
+  //   color: $section-title-color;
+  // }
   &:hover,
   &:focus {
     color: $accent-color;
@@ -57,22 +175,40 @@
   color: $section-title-color;
   line-height: 1.17;
   transition: color var(--transition-function);
-
-  &::after {
-    content: '';
-    @include centered(none, inherit, inherit);
-    width: 100%;
-    height: 4px;
-    background-color: $accent-color;
-    position: absolute;
-    bottom: -32px;
-    left: 0;
+  @media screen and(max-width:768px) {
+    font-size: 40px;
+    letter-spacing: 0.02;
+  }
+  @media screen and(min-width:768px) {
+    &::after {
+      content: '';
+      @include centered(none, inherit, inherit);
+      width: 100%;
+      height: 4px;
+      background-color: $accent-color;
+      position: absolute;
+      bottom: -32px;
+      left: 0;
+    }
   }
 }
 
 .contacts-list__link {
   @include centered(flex, inherit, center);
   line-height: 1.14;
+  font-size: 24px;
+  @media screen and (max-width: 768px) {
+    .contacts-list__item:first-child & {
+      color: $accent-color;
+      font-size: 34px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 12px;
+  }
+  @media screen and(min-width:1200px) {
+    font-size: 14px;
+  }
   color: $primery-text-color;
   fill: $primery-text-color;
   transition: color var(--transition-function), fill var(--transition-function);
@@ -94,10 +230,34 @@
 .contacts-list__icon-envelope {
   width: 16px;
   height: 12px;
-  margin-right: 10px;
+  margin-right: 8px;
+  @media screen and (min-width: 768px) {
+    margin-right: 10px;
+  }
 }
 .contacts-list__icon-telephone {
   width: 10px;
   height: 16px;
-  margin-right: 10px;
+  margin-right: 8px;
+  @media screen and (min-width: 768px) {
+    margin-right: 10px;
+  }
+}
+
+.mobile-social-list {
+  display: flex;
+  justify-content: center;
+}
+.mobile-social-list__item {
+  padding: 0 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02;
+  &:last-child {
+    border: none;
+  }
+}
+.mobile-social-list__link {
+  color: $accent-color;
 }
