--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,7 +1,11 @@
 .logo {
   @extend %boldSubtitle;
   font-family: $raleway;
-  font-size: 26px;
+  font-size: 24px;
+
+  @media screen and(min-width:1200px) {
+    font-size: 26px;
+  }
   text-decoration: none;
 
   &--blue-part {
