--- a/sass/components/_portfolio-projects.scss
+++ b/sass/components/_portfolio-projects.scss
@@ -1,22 +1,21 @@
 .projects-list {
   @media screen and(min-width:768px) {
-    @include centered(flex, center, inherit);
+    @include centered(flex, space-between, inherit);
     flex-wrap: wrap;
   }
 
   margin-top: -30px;
-  margin-left: -30px;
+  // margin-left: -30px;
 }
 .projects-list__item {
-  margin: auto;
-  flex-basis: calc(100% - 30px);
-
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
   @media screen and(min-width:768px) {
-    flex-basis: calc(100% / 2 - 30px);
-    margin-left: 30px;
+    width: 354px;
   }
   @media screen and(min-width:1200px) {
-    flex-basis: calc(100% / 3 - 30px);
+    width: 370px;
   }
   margin-top: 30px;
   transition: box-shadow var(--transition-function);
