--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -7,10 +7,17 @@
   @media screen and(min-width:768px) {
     @include centered(flex, inherit, inherit);
   }
+  @media screen and(min-width:768px) and (max-width: 1200px) {
+    flex-wrap: wrap;
+    @include centered(flex, space-between, inherit);
+  }
 }
 
 .team-list__item {
-  @media screen and (min-width: 768px) {
+  @media screen and(min-width:768px) and (max-width: 1200px) {
+    width: 354px;
+  }
+  @media screen and (min-width: 1200px) {
     margin-left: 30px;
   }
   padding-bottom: 24px;
